css/css.css
/* ... */
.hbtxt{
      background: #ffffff;
      color: #000;
      text-transform: uppercase;
      top:50%;
      left: 7%;
      padding: 10px;
      box-shadow: 0px 0px 0px 0px #ffffff;
      mix-blend-mode: lighten;
      line-height: 1;
      position: relative;
      display: inline-block;
      font-size: 26px !important;
      font-family: IBM Plex Sans bold, sans-serif;
      font-weight: 700;

}


.ustxt{
  background: #ffffff;
      color: #000;
      text-transform: uppercase;
      top:50%;
      left: 37%;
      padding: 18px;
      box-shadow: 0px 0px 0px 0px #ffffff;
      mix-blend-mode: lighten;
      line-height: 1;
      position: relative;
      display: inline;
      font-size: 56px !important;
      font-family: IBM Plex Sans bold, sans-serif;
      font-weight: 700;

}

.textus{
 color: rgb(232, 232, 232);
 font-family: sans-serif;
 font-size: 15px;
 color: rgb(116, 116, 116);
 margin-top: 30px;
}

.ab{
  box-sizing: border-box;
  float: right;
  margin-right: -520px;
  margin-top: -360px;
  display:block;
  overflow: hidden;
}

.porimg{
  /* The background image */
  background-image: url("../image/product/7.jpg");
  /* Set a specified height, or the minimum height for the background image */
  height: 500px;
  /* Center the background image */
  background-position:  center;
  /* Set the background image to no repeat */
  background-repeat: no-repeat;
  /* Scale the background image to be as large as possible */
  background-size: cover;

  background-attachment: fixed;

}



/*padding: 0px 0px 360px 0px;
*/


/*PRODUCTS*/
.pcolumn {
	margin-top: 5%;
	margin-bottom: 5%;
	float: left;
	width: 50%;
	font-family: sans-serif;
	font-size: 110%;
}
.pcolumn li {
list-style: none;
}

.pcolumn li::before {
  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
  color: #639fff; /* Change the color */
  font-weight: bold; /* If you want it to be bold */
  display: inline-block; /* Needed to add space between the bullet and the text */
  width: 1em; /* Also needed for space (tweak if needed) */
  margin-left: 5em; /* Also needed for space (tweak if needed) */
	margin-top: 1em;

}

.button {
    background-color: white;
    border: 2px solid #639fff;;
    color: #639fff;
    padding: 10px 54px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16	px;
		margin-left: 24%;
		margin-top: 3%;
		-webkit-transition-duration: 0.4s; /* Safari */
		transition-duration: 0.4s;

}

.button:hover {
    background-color: #639fff; /* Green */
    color: white;
}

.box {
    border-style: solid;
    border-color: black;
    border-width: 5px;
  }

.dish-box {
     margin: 30px 200px 0px 200px;
     padding: 0px 0px 300px 0px;

   }
.tx {
  float: left;
  background-color: #f1f1f1;
}

.im{
float: right;
margin-top: 50px;
padding: 0px 0px 0px 0px;
}

.dishp{
margin-bottom: 70px;
}
/*end of product*/



/* contact us */
.cus{
  overflow: hidden;
  margin-top: -1%;
  position: relative;
  text-align: center;
  color: white;
}

.cus img{
  width: 100%;
  display:block;
  margin-top: -5.874%;
  margin-bottom: -5.875%;
}

.ccolumn {
	margin-top: 5%;
	margin-bottom: 5%;
	float: left;
	width: 50%;
	font-family: sans-serif;
}


/* Style inputs with type="text", select elements and textareas */
input[type=text], select, textarea {
    width: 80%; /* Full width */
    padding: 12px; /* Some padding */
    border: 1px solid #ccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 6px; /* Add a top margin */
    margin-bottom: 16px; /* Bottom margin */
    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
}

/* Style the submit button with a specific background color etc */
input[type=submit] {
    background-color: white;
    color: #639fff;
    padding: 10px 54px;
    border: 2px solid #639fff;;
    border-radius: 4px;
    cursor: pointer;
		-webkit-transition-duration: 0.4s; /* Safari */
		transition-duration: 0.4s;
}

/* When moving the mouse over the submit button, add a darker green color */
input[type=submit]:hover {
	background-color: #639fff; /* Green */
	color: white;

}

.hporimg{
  background-image: url("../image/home/wel.jpg");
  height: 400px;
  /* Center the background image */
  background-position: center;
  /* Set the background image to no repeat */
  background-repeat: no-repeat;
  /* Scale the background image to be as large as possible */
  background-size:  100% 125%;
  background-attachment: fixed;
  color: #fff;
  -webkit-box-shadow: 0px 20px 29px 0px rgba(254,169,1,0.75);
  -moz-box-shadow: 0px 20px 29px 0px rgba(254,169,1,0.75);
  box-shadow: 0px 20px 29px 0px rgba(254,169,1,0.75);
}

.hpcolumn {
	margin-top: 5%;
	margin-bottom: 5%;
  margin-left: 5%;
	width: 50%;
	font-family: sans-serif;

}

.hpor{
  background: #ffffff;
      color: #000;
      text-transform: uppercase;
      padding: 4px;
      box-shadow: 0px 0px 0px 0px #ffffff;
      mix-blend-mode: lighten;
      line-height: 1;
      position: relative;
      display: inline-block;
      font-size: 40px !important;
      font-family: IBM Plex Sans bold, sans-serif;
      font-weight: 700;
}

.buttonh {

    border: 2px solid #639fff;
    color: white;
    padding: 10px 54px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
		margin-top: 3%;
		-webkit-transition-duration: 0.4s; /* Safari */
		transition-duration: 0.4s;

}

.buttonh:hover {
    background-color: #639fff;
    color: white;
}
/* ... */

